tests/crablangdoc-ui/issue-106226.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> $DIR/issue-106226.rs:2:11
   |
LL | type F = [_; ()];
   |           ^ not allowed in type signatures

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0121`.
