tests/crablangdoc-ui/issue-106226.rs
// This is a regression test for <https://github.com/crablang/crablang/issues/106226>.
type F = [_; ()];
//~^ ERROR
